@@ -17,6 +17,7 @@ Version 1.4.11 - SVN
   - Fix en/decode header swith in MDN (#1694687).
   - Fix compatibility with Windows path in administrator plugin (#1740469).
   - Fix disabling password encryption in mail_fetch (#1738001).
+  - Fix busy loop and notice when two literals in IMAP fetch (#1739433).
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
